# iikaesankai

./: .gitignore  README.md  alembic.ini  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: .env.sample  main.py
backend/src/core/: config.py  constants.py  db_settings.py  logging.py
backend/src/models/custom_types/: content.py  pagination.py
backend/src/models/requests/: iikae_request.py  vote_request.py
backend/src/models/responses/: get_contents_response.py  post_iikae_response.py
backend/src/models/sqlmodels/: __init__.py  input.py  paraphrase.py
backend/src/repositories/: content.py  input.py  paraphrase.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: index.tsx
frontend/src/assets/: constants.ts
frontend/src/components/: ContentCard.tsx  ContentList.tsx  CustomModal.tsx  CustomSpinner.tsx  InputSection.tsx  Logo.tsx
frontend/src/pages/: BasePage.tsx  ContentPage.tsx  Home.tsx  Result.tsx
frontend/src/types/: ContentType.ts
migrations/: env.py
migrations/versions/: 2024_03_06_1300-760e355e6794_init.py  2024_03_06_1441-cb0d27cae4e2_add_tables.py
